feat(linux): add reliable external signal launcher