@@ -2,7 +2,8 @@
   "Tests beckon's behavior with the FFM backend that this platform selects:
   signalfd on Linux and kqueue on macOS. project.clj sets
   -Dbeckon.signal.backend=ffm and --enable-native-access."
-  (:require [clojure.test :refer :all]
+  (:require [clojure.java.io :as io]
+            [clojure.test :refer :all]
             [beckon :as beckon])
   (:import (com.hypirion.beckon SignalRegistererHelper)
            (java.lang.reflect InvocationTargetException)
@@ -93,3 +94,63 @@
         (is (= 1 (set-native-disposition signo 1)))
         (finally
           (set-native-disposition signo prior))))))
+
+(deftest registration-does-not-install-default-disposition
+  (let [prior (set-native-disposition 15 1)]
+    (try
+      (reset! (beckon/signal-atom "TERM") [identity])
+      (is (= 1 (set-native-disposition 15 1))
+          "managed registration must leave SIG_IGN installed, never SIG_DFL")
+      (finally
+        (set-native-disposition 15 prior)))))
+
+(defn- linux? [] (= "Linux" (System/getProperty "os.name")))
+
+(defn- launcher-path []
+  (str (System/getProperty "user.dir") "/target/beckon-signal-launcher"))
+
+(defn- child-command []
+  ["java" "-Xrs" "--enable-native-access=ALL-UNNAMED"
+   "-Dbeckon.signal.backend=ffm"
+   "-cp" (System/getProperty "java.class.path")
+   "clojure.main" "-m" "beckon-signal-child" "TERM"])
+
+(defn- wait-for-line [^java.io.BufferedReader reader expected]
+  (loop [line (.readLine reader)]
+    (cond
+      (= line expected) true
+      (nil? line) false
+      :else (recur (.readLine reader)))))
+
+(deftest external-term-works-through-prelaunch-shim
+  (if (linux?)
+    (let [process (-> (ProcessBuilder.
+                       (into-array String
+                                   (concat [(launcher-path) "--signals" "TERM" "--"]
+                                           (child-command))))
+                      (.redirectErrorStream true)
+                      (.start))
+          reader (.bufferedReader (io/reader (.getInputStream process)))]
+      (try
+        (is (wait-for-line reader "READY"))
+        (.destroy (.orElseThrow (java.lang.ProcessHandle/of (.pid process))))
+        (is (wait-for-line reader "HANDLED"))
+        (is (.isAlive process))
+        (finally
+          (.destroyForcibly process))))
+    (is true "Linux-only subprocess test")))
+
+(deftest external-term-without-shim-retains-known-limitation
+  (if (linux?)
+    (let [process (-> (ProcessBuilder.
+                       (into-array String (child-command)))
+                      (.redirectErrorStream true)
+                      (.start))
+          reader (.bufferedReader (io/reader (.getInputStream process)))]
+      (try
+        (is (wait-for-line reader "READY"))
+        (.destroy (.orElseThrow (java.lang.ProcessHandle/of (.pid process))))
+        (is (not= 0 (.waitFor process)))
+        (finally
+          (.destroyForcibly process))))
+    (is true "Linux-only subprocess test")))
